# vil_sensor_fusion

./: .gitattributes  .gitignore  README.md
gtsam_fusion/: CMakeLists.txt  CMakeListsBACKUP.txt  README.md  package.xml
gtsam_fusion/config/: config_for_screenshots.rviz  rviz_config.rviz
gtsam_fusion/config/carla/: diagnostics_params.yaml  fusion_params.yaml  rovio.cfg
gtsam_fusion/config/san_rafael/: fusion_params.yaml  loam_params.yaml  rovio_camera.yaml  rovio_params.yaml
gtsam_fusion/include/: GraphManager.h
gtsam_fusion/include/gtsam_fusion/: GraphManager.h  GraphTest.h  IMUManager.h  ImuManagerRos.h  SensorManager.h  SensorManagerRos.h
gtsam_fusion/launch/: fusion.launch  fusion_carla.launch  fusion_san_rafael.launch  loam.launch
gtsam_fusion/msg/: DiagnosticMessage.msg  TestMessage.msg
gtsam_fusion/python/: diagnostics.py
gtsam_fusion/src/: GraphManager.cpp  IMUManager.cpp  SensorManager.cpp  degerate_odometry_filter.cpp  gtsam_fusion_node.cpp
gtsam_fusion/src/gtsam_fusion/: GraphManager.cpp  GraphTest.cpp  IMUManager.cpp  ImuManagerRos.cpp  SensorManagerRos.cpp
gtsam_fusion/test/: GraphManagerTest.cpp  TestTest.cpp  UnitTests.cpp
vil_fusion/: CMakeLists.txt  README.md  package.xml  setup.py
vil_fusion/cfg/: airsim.yaml  carla.yaml  carla_test.info  confusion.cfg  diagnostics_params.yaml  rovio.info  rovio.info_new  rovio_smb.info  rviz_config.rviz  smb.yaml
vil_fusion/cfg/carla/: diagnostics_params.yaml  rovio.info  rovio_camera.yaml
vil_fusion/include/: ImuState.h  VILConfusorNode.h  VILSensorEnumDefinition.h
vil_fusion/launch/: pointcloud_downsample.launch  vil_fusion.launch  vil_fusion_anymal.launch  vil_fusion_bag.launch  vil_fusion_euroc.launch  vil_fusion_forest.launch  vil_fusion_kitti.launch  vil_fusion_mine_os64.launch  vil_fusion_mine_vlp16.launch  vil_fusion_san_rafeal.launch  vil_fusion_smb.launch  vlp16.launch
vil_fusion/msg/: DebugMessage.msg  DegeneracyScore.msg  DiagnosticMessage.msg
vil_fusion/python/: README.md  degeneracy_detection_functions.py  diagnostics.py  downsample_pointcloud.py  find_correlations.py  ground_truth_pose.py  gt_transform.py  imgflip.py  imu_filter.py  loam_downsample_pointcloud.py  loam_frame_transform.py  make_graphs.py  make_prettier_graphs.py  process_data.py  quick_autoexperiments.py  special_graphs.py  vicon_frame_transform.py
vil_fusion/src/: ImuState.cpp  VILConfusorNode.cpp  imgflip.py
(+34 files in other folders)
